# games_project

./: .gitignore  Makefile  brain_calc.py  brain_gcd.py  pyproject.toml  run_calc.sh  run_gcd.sh
VD_games/: cli.py  pyproject.toml
VD_games/scripts/: VD_even.py  VD_games.py  VD_main.py  VD_progression.py  brain_calc.py  brain_gcd.py  vd_prime.py  vd_progression.py
VD_games/src/: game_engine.py
VD_games/src/brain_games/: engine.py
VD_games/src/brain_games/games/: calc.py  gcd.py
VD_games/src/games/: calc.py  even.py  gcd.py  prime.py  progression.py
