[project]
name = "oaip"
version = "0.1.0"
description = "VD Games package"
authors = [
    { name = "Victoria", email = "example@example.com" },
]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
VD-even = "VD_games.scripts.VD_even:main"
VD-games = "VD_games.scripts.VD_main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

