[project]
name = "brain-games"
version = "0.1.0"
description = "Collection of brain games"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games/src/brain_games"]

[project.scripts]
brain-calc = "VD_games.scripts.brain_calc:main"
brain-gcd = "VD_games.scripts.brain_gcd:main"
