[project]
name = "brain-games"
version = "0.1.0"
description = "Collection of brain games"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["prompt"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[project.scripts]
brain-calc = "VD_games.scripts.brain_calc:main"
brain-gcd = "VD_games.scripts.brain_gcd:main"
VD-even = "VD_games.scripts.VD_even:main"
VD-progression = "VD_games.scripts.vd_progression:main"
VD-prime = "VD_games.scripts.vd_prime:main"
