[project]
name = "OAIP"
version = "0.1.0"
description = "desc"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[project.scripts]
VD-games = "VD_games.scripts.VD_main:main"
VD-calc = "VD_games.scripts.brain_calc:main"
VD-gcd = "VD_games.scripts.brain_gcd:main"
VD-progression = "VD_games.scripts.vd_progression:main"
VD-prime = "VD_games.scripts.vd_prime:main"
